--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,10 @@
   <%= @post.body %>
 </p>
 
+<p>
+  <strong>Written By:</strong>
+  <%= @post.user.name %>
+</p>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
